--- a/00_MonotherapyUtils.ipynb
+++ b/00_MonotherapyUtils.ipynb
@@ -324,14 +324,11 @@
     "    report_epoch = int(num_batches/10)\n",
     "    time_list=[]\n",
     "    time0=time.time()\n",
-    "    print('Training function called at '+str(timestamp2datetime(time0)))\n",
     "    time1=time.time()\n",
     "    time2=time.time()\n",
     "    current_loss = 0\n",
     "    for batch, sample in enumerate(dataloader):\n",
     "        time0=time.time()\n",
-    "        if batch%report_epoch==0:\n",
-    "            print('==========Current batch is '+str(batch)+'==========')\n",
     "        X,y=MonotherapyDataset2device(sample,device)\n",
     "        pred = model(X)\n",
     "        loss,mse,corr = loss_fn(pred, y)\n",
@@ -341,12 +338,11 @@
     "        time2=time.time()\n",
     "        current_loss+=loss\n",
     "        time_list.append(time2-time0)\n",
-    "        if batch%report_epoch==0:\n",
-    "            print('Currently, each batch takes '+str(np.around(np.mean(time_list),1))+' seconds')\n",
-    "            print('rmse: '+ str(get_tensor_value(mse)**0.5)+'  pcc: '+str(get_tensor_value(corr))+ '   average loss: '+str(get_tensor_value(current_loss /(batch+1))))\n",
-    "    print('Time per batch: '+str(np.mean(time_list[1:]))+' seconds')\n",
     "\n",
     "def test_mono(dataloader, model, loss_fn, num_initial_run=1):\n",
+    "    model.train()\n",
+    "    X,y=MonotherapyDataset2device(sample,device)\n",
+    "    tmp= model(X)\n",
     "    model.eval()\n",
     "    num_batches = len(dataloader)\n",
     "    test_loss = 0\n",
@@ -376,6 +372,9 @@
     "    return test_loss,pcc,rmse\n",
     "\n",
     "def predict_mono(dataloader, model, num_initial_run=1):\n",
+    "    model.train()\n",
+    "    X,y=MonotherapyDataset2device(sample,device)\n",
+    "    tmp= model(X)\n",
     "    model.eval()\n",
     "    num_batches = len(dataloader)\n",
     "    real_list=[]\n",
