--- a/01_Preprocessing.ipynb
+++ b/01_Preprocessing.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=5>**Download and Preprocessing of D-PRISM**</font>\n",
+    "<font size=5>**Download and Preprocessing of DD-PRiSM**</font>\n",
     "\n",
-    "<font size=4>Monotherapy respnse dataset</font>\n",
+    "<font size=4>Monotherapy response dataset</font>\n",
     "-NCI60\n",
     "\n",
     "<font size=4>Combinationtherapy response dataset</font>\n",
